5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1407/executions/1573_1331.log
== TEST (2019-03-13 14:31:54) 
-- CODE:
jksdjksk
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jksdjksk
NameError: name 'jksdjksk' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:32:57) 
-- CODE:
kjnbjknhkj
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    kjnbjknhkj
NameError: name 'kjnbjknhkj' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:33:08) 
-- CODE:
print("oi")
-- OUTPUT:
oi
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:39:08) 
-- CODE:
print(bruce wayne")
-- ERROR:
File "XXXX", line 1
    print(bruce wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:40:30) 
-- CODE:

print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:40:36) 
-- CODE:
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
